fit gap between container issue

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
   grid-column-gap: 55px;
   grid-row-gap: 4px;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 200px 500px max-content;
   grid-template-areas:
     "header header header"
     "chart chart latest-news"
